[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dtt_fiber"
version = "1.1"

description = "Small package to process QuPath outputs for the dtt tracing project in the Dewan Lab"
readme = "README.md"
requires-python = ">=3.10, <=3.11"
license = { file = "LICENSE.txt" }
authors = [
  { name = "Austin Pauley", email = "pauley@psy.fsu.edu" },
  { name = "Samuel Caton", email = "caton@psy.fsu.edu" }
]
maintainers = [
  { name = "Austin Pauley", email = "pauley@psy.fsu.edu" }
]

dependencies = [
  'numpy',
  'pandas',
  'openpyxl',
  'allensdk',
  'tqdm',
  'ruamel.yaml<0.18',
  'matplotlib>3.4.2'
]

[project.optional-dependencies]
dev = ["jupyter"]
gui = ["pyside6", "pyqtdarktheme"]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Reports" = "https://github.com/pypa/sampleproject/issues"
"Funding" = "https://donate.pypi.org"
"Say Thanks!" = "http://saythanks.io/to/example"
"Source" = "https://github.com/pypa/sampleproject/"

[project.scripts]
dtt_fiber_processing = "dtt_fiber:main"

[tool.setuptools]
packages = ["dtt_fiber"]
#package-data = { "sample" = ["*.dat"] }